# biolib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/biolib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qpcr/: MinerMethod.py  __init__.py  abi.py  qpcrAnalysis.py  util.py
src/seqlib/: Alignment.py  Chip.py  GTFlib.py  JensenShannon.py  LSFlib.py  QCtools.py  RIPDiff.py  __init__.py  algorithms.py  blockIt.py  bowtie.py  bwa.py  clustering.py  continuousData.py  converters.py  dbConn.py  genomelib.py  gibson.py  gibson.py.bak  go.py  intervallib.py  lincClonelib.py  lincClonelib.py.bak  lincName.py  lincName.py.bak  lincRNAs.py  misc.py  myDataTypes.py  mySam.py  plotting.py  primer3lib.py  primer3lib.py.bak  prob.py  pygrlib.py  seqData.py  seqlib.py  seqstats.py  sequencelib.py  shrimp.py  smRNA.py  (+4 more)
tests/: test_qpcr.py  test_seqlib.py
