[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "biolib"
version = "0.2.0"
description = "Personal compbio utility library for sequence analysis and qPCR"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "lgoff" },
]
readme = "README.md"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pysam>=0.22",
    "rpy2>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
