[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biolib"
version = "0.2.0"
description = "Personal compbio utility library for sequence analysis and qPCR"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "lgoff" },
]
readme = "README.md"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pysam>=0.22",
    "pandas>=2.0",
]

[project.optional-dependencies]
r = [
    "rpy2>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "F403",   # star imports — present in legacy modules
    "F405",   # may be from star imports
    "E741",   # ambiguous variable names — common in scientific code (l, O, I)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports in test smoke tests are fine

[tool.coverage.run]
source = ["src"]
omit = [
    "src/seqlib/genomelib.py",
    "src/seqlib/pygrlib.py",
]

[tool.coverage.report]
show_missing = true
